--- a/styles/style.css
+++ b/styles/style.css
@@ -3,19 +3,14 @@
     font-family: 'Orbitron', sans-serif;
 }
 
-.display1 {
-    display: none;
-}
-
 body {
     background-color: #141E27;
 }
 
 .container {
-    display: inline-block;
-    margin: 2px;
-    width: 98%;
-    height: 860px;
+    
+    margin: 10px auto 30px auto;
+    width: 90%;
     border: 4px solid #EEEDDE;
     color: #EEEDDE;
 }
@@ -23,10 +18,10 @@ body {
 .enemyBox {
     padding: 8px;
     border: 3px solid #EEEDDE;
-    width: 40%;
-    height: 180px;
+    width: 50%;
+    height: 200px;
     margin-top: 2%;
-    margin-left: 57%;
+    margin-left: 46%;
 }
 
 .enemyInfo {
@@ -35,10 +30,15 @@ body {
 }
 
 .enemyInfo img {
-    padding: 10px;
-    width: 20%;
+    margin: 16px;
+    min-width: 160px;
+    width: 160px;
     border: 3px solid #EEEDDE;
 
+}
+
+.enemyInfo ul {
+    width: 300px;
 }
 
 .enemyInfo li {
@@ -50,37 +50,24 @@ body {
 }
 
 .enemyInfo h1 {
-    margin: -10px 15px;
+    width: 200px;
     font-size: 3.4em;
 }
 
-.playerInfo li {
-    font-size: 1.2em;
-    display: inline-block;
-    list-style: none;
-    padding:10px;
-    margin: 10px;
-}
-
-.playerInfo h1 {
-    margin: -10px 15px;
-    font-size: 3.4em;
-}
-
-.enemyAnimation {
+/* .enemyAnimation {
     display: inline-block;
     width: 50%;
     height: 200px;
     margin-top: -170px;
     margin-left: 2%;
-}
+} */
 
 .playerBox {
     padding: 8px;
     border: 3px solid #EEEDDE;
-    width: 40%;
-    height: 180px;
-    margin-top: 8%;
+    width: 50%;
+    height: 200px;
+    margin-top: 6%;
     margin-left: 2%;
 }
 
@@ -90,18 +77,31 @@ body {
 }
 
 .playerInfo img {
-    padding: 10px;
-    width: 20%;
+    margin: 16px;
+    min-width: 160px;
+    width: 160px;
     border: 3px solid #EEEDDE;
 }
 
+.playerInfo li {
+    font-size: 1.2em;
+    display: inline-block;
+    list-style: none;
+    padding: 10px;
+    margin: 10px 40px;
+}
 
-.playerAnimation {
+.playerInfo h1 {
+    width: 200px;
+    font-size: 3.4em;
+}
+
+/* .playerAnimation {
     width: 50%;
     height: 200px;
     margin-left: 48%;
     margin-top: -200px;
-}
+} */
 
 .playerSkills {
     display: flex;
@@ -109,7 +109,7 @@ body {
     align-items: center;
     border: 4px solid #EEEDDE;
     margin: 10px auto;
-    width: 95%;
+    width: 95.5%;
     height: 200px;
 }
 
