--- a/styles/style.css
+++ b/styles/style.css
@@ -96,12 +96,20 @@ body {
     font-size: 3.4em;
 }
 
-/* .playerAnimation {
-    width: 50%;
-    height: 200px;
-    margin-left: 48%;
-    margin-top: -200px;
-} */
+.playerAnimation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 100px;
+    margin-left: 55%;
+    margin-top: -109px;
+    border: 4px solid #EEEDDE;
+}
+
+.playerAnimation h2 {
+    margin: 20px;
+}
 
 .playerSkills {
     display: flex;
