--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ body {
 }
 
 .enemyBox {
+    letter-spacing:5px;
     padding: 8px;
     border: 3px solid #EEEDDE;
     width: 50%;
@@ -45,7 +46,7 @@ body {
     font-size: 1.2em;
     display: inline-block;
     list-style: none;
-    padding: 10px;
+    padding: 5px;
     margin: 10px;
 }
 
@@ -54,16 +55,10 @@ body {
     font-size: 3.4em;
 }
 
-.scoreboardContainer {
-    position: absolute;
-    width: 200px;
-    height: 100px;
-    top: 100px;
-    margin-top: -200;
-    margin-left: 2%;
-}
+
 
 .playerBox {
+    letter-spacing:5px;
     padding: 8px;
     border: 3px solid #EEEDDE;
     width: 50%;
@@ -88,8 +83,8 @@ body {
     font-size: 1.2em;
     display: inline-block;
     list-style: none;
-    padding: 10px;
-    margin: 10px 40px;
+    padding: 5px;
+    margin: 10px;
 }
 
 .playerInfo h1 {
@@ -97,7 +92,15 @@ body {
     font-size: 3.4em;
 }
 
-.playerAnimation {
+.scoreboardContainer {
+    position: absolute;
+    width: 200px;
+    height: 100px;
+    top: 100px;
+    margin-top: -200;
+    margin-left: 2%;
+}
+.battleCommentary {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,7 +111,7 @@ body {
     border: 4px solid #EEEDDE;
 }
 
-.playerAnimation h2 {
+.battleCommentary h2 {
     margin: 20px;
 }
 
@@ -131,4 +134,26 @@ body {
     width: 20%;
     height: 60%;
     text-decoration: none;
+}
+
+.btnPlay {
+    font-size: 1.8em;
+    margin: 4px;
+    border: 4px dashed #EEEDDE;
+    background-color: #141E27;
+    color: #EEEDDE;
+    width: 20%;
+    height: 60%;
+    text-decoration: none;
+}
+
+.displayNone {
+    display: none;
+}
+
+.footer {
+    display: flex;
+    width: 160px;
+    justify-content: space-around;
+    align-items: center;
 }
