--- a/styles/style.css
+++ b/styles/style.css
@@ -122,7 +122,7 @@ body {
     border: 4px solid #EEEDDE;
     margin: 10px auto;
     width: 95.5%;
-    height: 200px;
+    height: 160px;
 }
 
 .skillsBtn {
@@ -153,7 +153,35 @@ body {
 
 .footer {
     display: flex;
-    width: 160px;
+    width: 300px;
     justify-content: space-around;
     align-items: center;
+}
+
+.footer li {
+    list-style: none;
+    
+    
+}
+
+.footer img {
+    width: 40px;
+    height: 40px;
+}
+
+.footer button {
+    font-size: 16px;
+    text-decoration: none;
+    margin: 10px;
+    background-color: #141E27;
+    color: #EEEDDE;
+    border: #EEEDDE solid 4px;
+    width:90px;
+    height: 50px;
+}
+
+.footer a {
+    font-size: 16px;
+    text-decoration: none;
+    color: #EEEDDE;
 }
