--- a/styles/style.css
+++ b/styles/style.css
@@ -19,10 +19,14 @@ body {
     letter-spacing:5px;
     padding: 8px;
     border: 3px solid #EEEDDE;
-    width: 50%;
+    width: 45%;
     height: 200px;
     margin-top: 2%;
     margin-left: 46%;
+}
+
+.enemyBox ul {
+    width: 300px;
 }
 
 .enemyInfo {
@@ -32,18 +36,15 @@ body {
 
 .enemyInfo img {
     margin: 16px;
-    min-width: 160px;
+    min-width: 100px;
     width: 160px;
     border: 3px solid #EEEDDE;
 
 }
 
-.enemyInfo ul {
-    width: 300px;
-}
 
 .enemyInfo li {
-    font-size: 1.2em;
+    font-size: 1vmax;
     display: inline-block;
     list-style: none;
     padding: 5px;
@@ -52,7 +53,7 @@ body {
 
 .enemyInfo h1 {
     width: 200px;
-    font-size: 3.4em;
+    font-size: 2.5vmax;
 }
 
 
@@ -61,10 +62,14 @@ body {
     letter-spacing:5px;
     padding: 8px;
     border: 3px solid #EEEDDE;
-    width: 50%;
+    width: 45%;
     height: 200px;
     margin-top: 6%;
     margin-left: 2%;
+}
+
+.playerBox ul {
+    width: 350px;
 }
 
 .playerInfo {
@@ -74,13 +79,13 @@ body {
 
 .playerInfo img {
     margin: 16px;
-    min-width: 160px;
+    min-width: 100px;
     width: 160px;
     border: 3px solid #EEEDDE;
 }
 
 .playerInfo li {
-    font-size: 1.2em;
+    font-size: 1vmax;
     display: inline-block;
     list-style: none;
     padding: 5px;
@@ -88,11 +93,12 @@ body {
 }
 
 .playerInfo h1 {
-    width: 200px;
-    font-size: 3.4em;
+    
+    font-size: 2.5vmax;
 }
 
 .scoreboardContainer {
+    font-size: 1vmax;
     position: absolute;
     width: 200px;
     height: 100px;
@@ -101,10 +107,11 @@ body {
     margin-left: 2%;
 }
 .battleCommentary {
+    font-size: 1vmax;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 600px;
+    width: 42.5%;
     height: 100px;
     margin-left: 55%;
     margin-top: -109px;
@@ -126,7 +133,7 @@ body {
 }
 
 .skillsBtn {
-    font-size: 1.8em;
+    font-size: 1.2vmax;
     margin: 4px;
     border: 4px dashed #EEEDDE;
     background-color: #141E27;
